--- a/NetEvent/Client/Resources/App.de.resx
+++ b/NetEvent/Client/Resources/App.de.resx
@@ -117,8 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Name" xml:space="preserve">
-    <value>Name</value>
+  <data name="Index.Hello" xml:space="preserve">
+    <value>Hallo, Welt!</value>
     <comment/>
   </data>
 </root>
