--- a/NetEvent/Client/Resources/App.resx
+++ b/NetEvent/Client/Resources/App.resx
@@ -117,8 +117,120 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Name" xml:space="preserve">
-    <value>Name</value>
+  <data name="Shared.MainLayout.Administration" xml:space="preserve">
+    <value>Administration</value>
+    <comment/>
+  </data>
+  <data name="Shared.NavigationBar.Hello" xml:space="preserve">
+    <value>Hello,</value>
+    <comment/>
+  </data>
+  <data name="Shared.NavigationBar.Logout" xml:space="preserve">
+    <value>Log out</value>
+    <comment/>
+  </data>
+  <data name="Shared.NavigationBar.Register" xml:space="preserve">
+    <value>Register</value>
+    <comment/>
+  </data>
+  <data name="Shared.NavigationBar.Login" xml:space="preserve">
+    <value>Log in</value>
+    <comment/>
+  </data>
+  <data name="Shared.NavMenu.Brand" xml:space="preserve">
+    <value>NetEvent</value>
+    <comment/>
+  </data>
+  <data name="Shared.NavMenu.Home" xml:space="preserve">
+    <value>Home</value>
+    <comment/>
+  </data>
+  <data name="Shared.NavMenu.Counter" xml:space="preserve">
+    <value>Counter</value>
+    <comment/>
+  </data>
+  <data name="Shared.NavMenu.FetchData" xml:space="preserve">
+    <value>Fetch data</value>
+    <comment/>
+  </data>
+  <data name="App.NotAuthorized" xml:space="preserve">
+    <value>You are not authorized to access this resource.</value>
+    <comment/>
+  </data>
+  <data name="App.NothingHere" xml:space="preserve">
+    <value>Sorry, there's nothing at this address.</value>
+    <comment/>
+  </data>
+  <data name="Login.Title" xml:space="preserve">
+    <value>Login</value>
+    <comment/>
+  </data>
+  <data name="Login.Password" xml:space="preserve">
+    <value>Password</value>
+    <comment/>
+  </data>
+  <data name="Login.RememberMe" xml:space="preserve">
+    <value>Remember Me</value>
+    <comment/>
+  </data>
+  <data name="Login.LoginButton" xml:space="preserve">
+    <value>Login</value>
+    <comment/>
+  </data>
+  <data name="Index.Title" xml:space="preserve">
+    <value>Index</value>
+    <comment/>
+  </data>
+  <data name="Index.Hello" xml:space="preserve">
+    <value>Hello, world!</value>
+    <comment/>
+  </data>
+  <data name="Index.Welcome" xml:space="preserve">
+    <value>Welcome to your new app.</value>
+    <comment/>
+  </data>
+  <data name="Administration.AdminLayout.FooterPlaceholder" xml:space="preserve">
+    <value>Place sticky footer content here.</value>
+    <comment/>
+  </data>
+  <data name="Administration.AdminMenu.Dashboard" xml:space="preserve">
+    <value>Dashboard</value>
+    <comment/>
+  </data>
+  <data name="Administration.AdminMenu.Users" xml:space="preserve">
+    <value>Users</value>
+    <comment/>
+  </data>
+  <data name="Administration.Index.Users" xml:space="preserve">
+    <value>Users</value>
+    <comment/>
+  </data>
+  <data name="Administration.Users.Periodic" xml:space="preserve">
+    <value>Periodic Elements</value>
+    <comment/>
+  </data>
+  <data name="Administration.Users.UserName" xml:space="preserve">
+    <value>Username</value>
+    <comment/>
+  </data>
+  <data name="Administration.Users.FirstName" xml:space="preserve">
+    <value>First Name</value>
+    <comment/>
+  </data>
+  <data name="Administration.Users.LastName" xml:space="preserve">
+    <value>Last Name</value>
+    <comment/>
+  </data>
+  <data name="Administration.Users.Email" xml:space="preserve">
+    <value>Email</value>
+    <comment/>
+  </data>
+  <data name="Administration.Users.PhoneNumber" xml:space="preserve">
+    <value>Phone Number</value>
+    <comment/>
+  </data>
+  <data name="Administration.Users.EmailConfirmed" xml:space="preserve">
+    <value>Email Confirmed</value>
     <comment/>
   </data>
 </root>
