--- a/NetEvent/Client/Resources/App.resx
+++ b/NetEvent/Client/Resources/App.resx
@@ -161,6 +161,10 @@
     <value>Sorry, there's nothing at this address.</value>
     <comment/>
   </data>
+  <data name="App.NotFound" xml:space="preserve">
+    <value>Not found</value>
+    <comment/>
+  </data>
   <data name="Login.Title" xml:space="preserve">
     <value>Login</value>
     <comment/>
