--- a/NetEvent/Client/Resources/App.resx
+++ b/NetEvent/Client/Resources/App.resx
@@ -213,4 +213,19 @@
   <data name="Administration.Users.Role" xml:space="preserve">
     <value>Role</value>
   </data>
+  <data name="Register.Title" xml:space="preserve">
+    <value>Register</value>
+  </data>
+  <data name="Register.RegisterButton" xml:space="preserve">
+    <value>Register</value>
+  </data>
+  <data name="Register.ConfirmPassword" xml:space="preserve">
+    <value>Confirm Password</value>
+  </data>
+  <data name="Register.Email" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="Register.Password" xml:space="preserve">
+    <value>Password</value>
+  </data>
 </root>
