--- a/NetEvent/Client/Resources/App.resx
+++ b/NetEvent/Client/Resources/App.resx
@@ -228,4 +228,10 @@
   <data name="Register.Password" xml:space="preserve">
     <value>Password</value>
   </data>
+  <data name="UserService.UpdateUserAsync.Error" xml:space="preserve">
+    <value>Error updating user {0}</value>
+  </data>
+  <data name="UserService.UpdateUserAsync.Success" xml:space="preserve">
+    <value>User {0} successfully updated</value>
+  </data>
 </root>
