--- a/NetEvent/Client/Resources/App.resx
+++ b/NetEvent/Client/Resources/App.resx
@@ -291,4 +291,25 @@
   <data name="NetEventDataGrid.DeleteDialog.Title" xml:space="preserve">
     <value>Warning</value>
   </data>
+  <data name="Administration.Users.Roles.IsDefault" xml:space="preserve">
+    <value>Default</value>
+  </data>
+  <data name="RoleService.AddRoleAsync.Error" xml:space="preserve">
+    <value>Error adding role {0}</value>
+  </data>
+  <data name="RoleService.AddRoleAsync.Success" xml:space="preserve">
+    <value>Role {0} successfully added</value>
+  </data>
+  <data name="RoleService.DeleteRoleAsync.Error" xml:space="preserve">
+    <value>Error deleting role {0}</value>
+  </data>
+  <data name="RoleService.DeleteRoleAsync.Success" xml:space="preserve">
+    <value>Role {0} successfully deleted</value>
+  </data>
+  <data name="RoleService.UpdateRoleAsync.Error" xml:space="preserve">
+    <value>Error updating role {0}</value>
+  </data>
+  <data name="RoleService.UpdateRoleAsync.Success" xml:space="preserve">
+    <value>Role {0} successfully updated</value>
+  </data>
 </root>
