--- a/NetEvent/Client/Resources/App.resx
+++ b/NetEvent/Client/Resources/App.resx
@@ -183,6 +183,9 @@
   <data name="Administration.AdminMenu.Users" xml:space="preserve">
     <value>Users</value>
   </data>
+  <data name="Administration.AdminMenu.Settings" xml:space="preserve">
+    <value>Settings</value>
+  </data>
   <data name="Administration.Index.Users" xml:space="preserve">
     <value>Users</value>
   </data>
@@ -339,7 +342,13 @@
   <data name="RoleService.UpdateRoleAsync.Success" xml:space="preserve">
     <value>Role {0} successfully updated</value>
   </data>
-  <data name="Administration.AdminMenu.Organization" xml:space="preserve">
+  <data name="Administration.Settings.Organization" xml:space="preserve">
     <value>Organization</value>
+  </data>  
+  <data name="Administration.Settings.LoadingData" xml:space="preserve">
+    <value>Loading Data...</value>
+  </data>
+  <data name="Administration.Settings.MissingType" xml:space="preserve">
+    <value>Missing InputType {0} for Setting {1} with Value- {2}</value>
   </data>
 </root>
