--- a/NetEvent/Client/Resources/App.resx
+++ b/NetEvent/Client/Resources/App.resx
@@ -344,11 +344,32 @@
   </data>
   <data name="Administration.Settings.Organization" xml:space="preserve">
     <value>Organization</value>
-  </data>  
+  </data>
   <data name="Administration.Settings.LoadingData" xml:space="preserve">
     <value>Loading Data...</value>
   </data>
   <data name="Administration.Settings.MissingType" xml:space="preserve">
     <value>Missing InputType {0} for Setting {1} with Value- {2}</value>
+  </data>
+  <data name="Administration.AdminMenu.SystemInfo" xml:space="preserve">
+    <value>System Info</value>
+  </data>
+  <data name="Administration.Systeminfo.Components" xml:space="preserve">
+    <value>Components</value>
+  </data>
+  <data name="Administration.Systeminfo.Components.Key" xml:space="preserve">
+    <value>Component</value>
+  </data>
+  <data name="Administration.Systeminfo.Components.SearchPlaceholder" xml:space="preserve">
+    <value>Search component</value>
+  </data>
+  <data name="Administration.Systeminfo.Components.Value" xml:space="preserve">
+    <value>Version</value>
+  </data>
+  <data name="Administration.Systeminfo.Health" xml:space="preserve">
+    <value>Health</value>
+  </data>
+  <data name="Administration.Systeminfo.Versions" xml:space="preserve">
+    <value>Versions</value>
   </data>
 </root>
