--- a/NetEvent/Client/Resources/App.resx
+++ b/NetEvent/Client/Resources/App.resx
@@ -352,6 +352,9 @@
     <value>Language</value>
   </data>
   <data name="SystemSetting.OrganizationData.OrganizationName.Label" xml:space="preserve">
-    <value>Name of Organization</value>
+    <value>Name of organization</value>
+  </data>
+  <data name="SystemSetting.OrganizationData.DataCultureInfo.Hint" xml:space="preserve">
+    <value>Systemwide language. Changing forces page reload.</value>
   </data>
 </root>
