--- a/NetEvent/Client/Resources/App.resx
+++ b/NetEvent/Client/Resources/App.resx
@@ -432,4 +432,10 @@
   <data name="Administration.Images.SettingsUsages" xml:space="preserve">
     <value>The image is used in the following Settings: {0}</value>
   </data>
+  <data name="Shared.MainLayout.AllRightsReserved" xml:space="preserve">
+    <value>All rights reserved.</value>
+  </data>
+  <data name="Shared.MainLayout.PoweredBy" xml:space="preserve">
+    <value>Powered By</value>
+  </data>
 </root>
