--- a/NetEvent/Client/Resources/App.resx
+++ b/NetEvent/Client/Resources/App.resx
@@ -525,4 +525,7 @@
   <data name="Shared.NavigationBar.Profile" xml:space="preserve">
     <value>Edit Profile</value>
   </data>
+  <data name="Administration.Events.Event.ShortDescription" xml:space="preserve">
+    <value>Short description</value>
+  </data>
 </root>
