--- a/NetEvent/Client/Resources/App.resx
+++ b/NetEvent/Client/Resources/App.resx
@@ -717,4 +717,37 @@
   <data name="Administration.Events.EventTicketType.SellStartDate" xml:space="preserve">
     <value>Sell Start</value>
   </data>
+  <data name="Administration.Events.Event.Tickets.AvailableTickets" xml:space="preserve">
+    <value>Available Tickets</value>
+  </data>
+  <data name="Administration.Events.Event.Tickets.IsGiftable" xml:space="preserve">
+    <value>Is Giftable</value>
+  </data>
+  <data name="Administration.Events.Event.Tickets.Name" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="Administration.Events.Event.Tickets.Price" xml:space="preserve">
+    <value>Price</value>
+  </data>
+  <data name="Administration.Events.Event.Tickets.SellEndDate" xml:space="preserve">
+    <value>Sell End</value>
+  </data>
+  <data name="Administration.Events.Event.Tickets.SellStartDate" xml:space="preserve">
+    <value>Sell Start</value>
+  </data>
+  <data name="Administration.Events.Event.Tickets.Sort" xml:space="preserve">
+    <value>Sort by</value>
+  </data>
+  <data name="Administration.Events.EventTicketType.Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="Administration.Events.EventTicketType.Edit" xml:space="preserve">
+    <value>Edit</value>
+  </data>
+  <data name="Administration.Events.EventTicketType.Id" xml:space="preserve">
+    <value>Id</value>
+  </data>
+  <data name="Administration.Events.EventTicketType.Save" xml:space="preserve">
+    <value>Save</value>
+  </data>
 </root>
