--- a/NetEvent/Client/Resources/App.resx
+++ b/NetEvent/Client/Resources/App.resx
@@ -750,16 +750,19 @@
   <data name="Administration.Events.EventTicketType.Save" xml:space="preserve">
     <value>Save</value>
   </data>
-  <data name="Administration.Events.Event.Tickets.Available" xml:space="preserve">
-    <value>available</value>
-  </data>
-  <data name="Administration.Events.Event.Tickets.Buy" xml:space="preserve">
+  <data name="Events.Event.Tickets.Buy" xml:space="preserve">
     <value>Buy</value>
   </data>
-  <data name="Administration.Events.Event.Tickets.AvailableFrom" xml:space="preserve">
+  <data name="Events.Event.Tickets.AvailableFrom" xml:space="preserve">
     <value>Available from {0}</value>
   </data>
-  <data name="Administration.Events.Event.Tickets.AvailableUntil" xml:space="preserve">
+  <data name="Events.Event.Tickets.AvailableUntil" xml:space="preserve">
     <value>Available until {0}</value>
+  </data>
+  <data name="Events.Event.Tickets.BuyNow" xml:space="preserve">
+    <value>Buy now</value>
+  </data>
+  <data name="Events.Event.Tickets.Available" xml:space="preserve">
+    <value>available {0}</value>
   </data>
 </root>
